@@ -2,6 +2,7 @@
  - Add PYX code for data and comment, which are removed.
  - Add descriptions to test cases.
  - Add test for constructor.
+ - Add tests for parse().
  - Add tests for parse_handler().
  - Rewrite implicit encode() to Encode::encode().
  - Update README.
